adding titles of sections

--- a/Project_7_World_Bank_Poverty_and_Equity_Data_Analysis_and_Visualization/notebook/Project.ipynb
+++ b/Project_7_World_Bank_Poverty_and_Equity_Data_Analysis_and_Visualization/notebook/Project.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "42cbc880",
+   "metadata": {},
+   "source": [
+    "# World Bank Poverty and Equity Data Analysis and Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc356a3c",
+   "metadata": {},
+   "source": [
+    "## Libraries Importing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a8604238",
@@ -22,6 +38,14 @@
     "import plotly.graph_objects as go\n",
     "\n",
     "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec337d4d",
+   "metadata": {},
+   "source": [
+    "## Data Collection & Preparation"
    ]
   },
   {
@@ -2223,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "ab5493cf",
    "metadata": {
     "scrolled": true
@@ -2233,9 +2257,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [23/May/2022 13:31:16] \"\u001b[37mGET /_shutdown_62687ca6-b899-4df0-9328-afd2a77114eb HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [28/May/2022 10:36:55] \"\u001b[37mGET /_shutdown_0e8486f9-a949-4f10-952b-0923efc74760 HTTP/1.1\u001b[0m\" 200 -\n",
       " * Running on http://127.0.0.1:8059/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [23/May/2022 13:31:16] \"\u001b[37mGET /_alive_62687ca6-b899-4df0-9328-afd2a77114eb HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [28/May/2022 10:36:55] \"\u001b[37mGET /_alive_0e8486f9-a949-4f10-952b-0923efc74760 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -2249,14 +2273,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [23/May/2022 13:31:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [23/May/2022 13:31:20] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [23/May/2022 13:31:20] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [23/May/2022 13:31:20] \"\u001b[37mGET /_favicon.ico?v=1.19.0 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [23/May/2022 13:31:20] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n",
-      "127.0.0.1 - - [23/May/2022 13:31:20] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n",
-      "127.0.0.1 - - [23/May/2022 13:31:20] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n",
-      "127.0.0.1 - - [23/May/2022 13:31:20] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n"
+      "127.0.0.1 - - [28/May/2022 10:37:02] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [28/May/2022 10:37:04] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [28/May/2022 10:37:04] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [28/May/2022 10:37:04] \"\u001b[37mGET /_favicon.ico?v=1.19.0 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [28/May/2022 10:37:04] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n",
+      "127.0.0.1 - - [28/May/2022 10:37:04] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n",
+      "127.0.0.1 - - [28/May/2022 10:37:04] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n",
+      "127.0.0.1 - - [28/May/2022 10:37:04] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 204 -\n",
+      "127.0.0.1 - - [28/May/2022 10:40:09] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -2285,7 +2310,8 @@
     "                ])\n",
     "            ),\n",
     "    html.Br(),\n",
-    "    html.H3('Gini Index - World Bank Data', style={'color':'#000000','backgroundColor':'#DAA520','textAlign': 'center'}),\n",
+    "    html.H3('Gini Index - World Bank Data', \n",
+    "            style={'color':'#000000','backgroundColor':'#DAA520','textAlign': 'center'}),\n",
     "    html.H6(\"\"\"Gini index measures the extent to which the distribution \n",
     "                of income (or, in some cases, consumption expenditure) \n",
     "                among individuals or households within an economy \n",
@@ -2347,21 +2373,26 @@
     "                         html.A('Waleed',href='https://www.linkedin.com/in/waleedabdulla/')\n",
     "                        ]\n",
     "                       ),\n",
-    "#                 html.Br(),\n",
     "                html.Li('Job Title: Data Analyst (actively looking for work)'),\n",
-    "                html.Li([\n",
-    "                            'Data Source: ', \n",
-    "                             html.A('World Bank Poverty & Equity Dataset',         \n",
-    "                             href='https://datacatalog.worldbank.org/dataset/poverty-and-equity-database')\n",
+    "                html.Li(['LinkedIn: ', \n",
+    "                             html.A('Waleed on LinkedIn',         \n",
+    "                             href='https://github.com/Waleed18574/Waleed_Python_Data_Analysis_and_Data_Science_Portfolio_Projects')\n",
+    "                            ]),\n",
+    "                html.Li(['GitHub: ', \n",
+    "                             html.A('Waleed on Github',         \n",
+    "                             href='https://www.linkedin.com/in/waleedabdulla/')\n",
     "                            ]),\n",
     "                html.Br(),\n",
     "                html.Br()\n",
     "                    ]\n",
     "                   )\n",
     "                 ], \n",
-    "            label='Project Info'),\n",
+    "            label='Author Info'),\n",
     "          dbc.Tab([\n",
-    "           html.Ul([html.Br(),\n",
+    "           html.Ul([html.Li(['Data Source: ', \n",
+    "                             html.A('World Bank Poverty & Equity Dataset',         \n",
+    "                             href='https://datacatalog.worldbank.org/dataset/poverty-and-equity-database')\n",
+    "                            ]),\n",
     "                    html.Li('Number of Economies: 170'),\n",
     "                    html.Li('Temporal Coverage: 1974 - 2019'),\n",
     "                    html.Li('Update Frequency: Quarterly'),\n",
@@ -2370,7 +2401,7 @@
     "                    ]\n",
     "                   ),\n",
     "                  ], \n",
-    "            label='Key Facts'\n",
+    "            label='Project Key Facts'\n",
     "                  )\n",
     "            ] \n",
     "           )\n",
