updating the files in every project

--- a/Project_2_Contoso_Business_Analytics/part_2_product_analysis/notebook/ContosoProductAnalysis.ipynb
+++ b/Project_2_Contoso_Business_Analytics/part_2_product_analysis/notebook/ContosoProductAnalysis.ipynb
@@ -3591,18 +3591,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(Aluminum cage is lighter than our mountain ve...</td>\n",
-       "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
-       "      <td>0.057552</td>\n",
-       "      <td>0.174390</td>\n",
-       "      <td>0.051081</td>\n",
-       "      <td>0.887550</td>\n",
-       "      <td>5.089445</td>\n",
-       "      <td>0.041044</td>\n",
-       "      <td>7.342028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
        "      <td>(Aluminum cage is lighter than our mountain ve...</td>\n",
        "      <td>0.174390</td>\n",
@@ -3614,19 +3602,19 @@
        "      <td>1.332852</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(Tough aluminum cage holds bottle securly on t...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>(Aluminum cage is lighter than our mountain ve...</td>\n",
        "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
-       "      <td>0.088409</td>\n",
+       "      <td>0.057552</td>\n",
        "      <td>0.174390</td>\n",
-       "      <td>0.077083</td>\n",
-       "      <td>0.871895</td>\n",
-       "      <td>4.999676</td>\n",
-       "      <td>0.061665</td>\n",
-       "      <td>6.444810</td>\n",
+       "      <td>0.051081</td>\n",
+       "      <td>0.887550</td>\n",
+       "      <td>5.089445</td>\n",
+       "      <td>0.041044</td>\n",
+       "      <td>7.342028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
        "      <td>(Tough aluminum cage holds bottle securly on t...</td>\n",
        "      <td>0.174390</td>\n",
@@ -3638,19 +3626,19 @@
        "      <td>1.633719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(Incredible traction, lightweight carbon reinf...</td>\n",
-       "      <td>(Self-sealing tube.)</td>\n",
-       "      <td>0.070380</td>\n",
-       "      <td>0.140760</td>\n",
-       "      <td>0.050040</td>\n",
-       "      <td>0.711002</td>\n",
-       "      <td>5.051147</td>\n",
-       "      <td>0.040134</td>\n",
-       "      <td>2.973164</td>\n",
+       "      <th>3</th>\n",
+       "      <td>(Tough aluminum cage holds bottle securly on t...</td>\n",
+       "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
+       "      <td>0.088409</td>\n",
+       "      <td>0.174390</td>\n",
+       "      <td>0.077083</td>\n",
+       "      <td>0.871895</td>\n",
+       "      <td>4.999676</td>\n",
+       "      <td>0.061665</td>\n",
+       "      <td>6.444810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>(Self-sealing tube.)</td>\n",
        "      <td>(Incredible traction, lightweight carbon reinf...</td>\n",
        "      <td>0.140760</td>\n",
@@ -3662,19 +3650,19 @@
        "      <td>1.442391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>(Universal fit, well-vented, lightweight , sna...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>(Incredible traction, lightweight carbon reinf...</td>\n",
        "      <td>(Self-sealing tube.)</td>\n",
-       "      <td>0.235179</td>\n",
+       "      <td>0.070380</td>\n",
        "      <td>0.140760</td>\n",
-       "      <td>0.058824</td>\n",
-       "      <td>0.250123</td>\n",
-       "      <td>1.776940</td>\n",
-       "      <td>0.025720</td>\n",
-       "      <td>1.145840</td>\n",
+       "      <td>0.050040</td>\n",
+       "      <td>0.711002</td>\n",
+       "      <td>5.051147</td>\n",
+       "      <td>0.040134</td>\n",
+       "      <td>2.973164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>(Self-sealing tube.)</td>\n",
        "      <td>(Universal fit, well-vented, lightweight , sna...</td>\n",
        "      <td>0.140760</td>\n",
@@ -3685,40 +3673,52 @@
        "      <td>0.025720</td>\n",
        "      <td>1.313896</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>(Universal fit, well-vented, lightweight , sna...</td>\n",
+       "      <td>(Self-sealing tube.)</td>\n",
+       "      <td>0.235179</td>\n",
+       "      <td>0.140760</td>\n",
+       "      <td>0.058824</td>\n",
+       "      <td>0.250123</td>\n",
+       "      <td>1.776940</td>\n",
+       "      <td>0.025720</td>\n",
+       "      <td>1.145840</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                                         antecedents  \\\n",
-       "0  (Aluminum cage is lighter than our mountain ve...   \n",
-       "1  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
-       "2  (Tough aluminum cage holds bottle securly on t...   \n",
-       "3  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
-       "4  (Incredible traction, lightweight carbon reinf...   \n",
-       "5                               (Self-sealing tube.)   \n",
-       "6  (Universal fit, well-vented, lightweight , sna...   \n",
-       "7                               (Self-sealing tube.)   \n",
+       "0  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
+       "1  (Aluminum cage is lighter than our mountain ve...   \n",
+       "2  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
+       "3  (Tough aluminum cage holds bottle securly on t...   \n",
+       "4                               (Self-sealing tube.)   \n",
+       "5  (Incredible traction, lightweight carbon reinf...   \n",
+       "6                               (Self-sealing tube.)   \n",
+       "7  (Universal fit, well-vented, lightweight , sna...   \n",
        "\n",
        "                                         consequents  antecedent support  \\\n",
-       "0  (AWC logo water bottle - holds 30 oz; leak-pro...            0.057552   \n",
-       "1  (Aluminum cage is lighter than our mountain ve...            0.174390   \n",
-       "2  (AWC logo water bottle - holds 30 oz; leak-pro...            0.088409   \n",
-       "3  (Tough aluminum cage holds bottle securly on t...            0.174390   \n",
-       "4                               (Self-sealing tube.)            0.070380   \n",
-       "5  (Incredible traction, lightweight carbon reinf...            0.140760   \n",
-       "6                               (Self-sealing tube.)            0.235179   \n",
-       "7  (Universal fit, well-vented, lightweight , sna...            0.140760   \n",
+       "0  (Aluminum cage is lighter than our mountain ve...            0.174390   \n",
+       "1  (AWC logo water bottle - holds 30 oz; leak-pro...            0.057552   \n",
+       "2  (Tough aluminum cage holds bottle securly on t...            0.174390   \n",
+       "3  (AWC logo water bottle - holds 30 oz; leak-pro...            0.088409   \n",
+       "4  (Incredible traction, lightweight carbon reinf...            0.140760   \n",
+       "5                               (Self-sealing tube.)            0.070380   \n",
+       "6  (Universal fit, well-vented, lightweight , sna...            0.140760   \n",
+       "7                               (Self-sealing tube.)            0.235179   \n",
        "\n",
        "   consequent support   support  confidence      lift  leverage  conviction  \n",
-       "0            0.174390  0.051081    0.887550  5.089445  0.041044    7.342028  \n",
-       "1            0.057552  0.051081    0.292909  5.089445  0.041044    1.332852  \n",
-       "2            0.174390  0.077083    0.871895  4.999676  0.061665    6.444810  \n",
-       "3            0.088409  0.077083    0.442015  4.999676  0.061665    1.633719  \n",
-       "4            0.140760  0.050040    0.711002  5.051147  0.040134    2.973164  \n",
-       "5            0.070380  0.050040    0.355501  5.051147  0.040134    1.442391  \n",
-       "6            0.140760  0.058824    0.250123  1.776940  0.025720    1.145840  \n",
-       "7            0.235179  0.058824    0.417898  1.776940  0.025720    1.313896  "
+       "0            0.057552  0.051081    0.292909  5.089445  0.041044    1.332852  \n",
+       "1            0.174390  0.051081    0.887550  5.089445  0.041044    7.342028  \n",
+       "2            0.088409  0.077083    0.442015  4.999676  0.061665    1.633719  \n",
+       "3            0.174390  0.077083    0.871895  4.999676  0.061665    6.444810  \n",
+       "4            0.070380  0.050040    0.355501  5.051147  0.040134    1.442391  \n",
+       "5            0.140760  0.050040    0.711002  5.051147  0.040134    2.973164  \n",
+       "6            0.235179  0.058824    0.417898  1.776940  0.025720    1.313896  \n",
+       "7            0.140760  0.058824    0.250123  1.776940  0.025720    1.145840  "
       ]
      },
      "execution_count": 47,
@@ -3779,43 +3779,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(Aluminum cage is lighter than our mountain ve...</td>\n",
        "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
+       "      <td>(Aluminum cage is lighter than our mountain ve...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
        "      <td>(Aluminum cage is lighter than our mountain ve...</td>\n",
+       "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(Tough aluminum cage holds bottle securly on t...</td>\n",
        "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
+       "      <td>(Tough aluminum cage holds bottle securly on t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
        "      <td>(Tough aluminum cage holds bottle securly on t...</td>\n",
+       "      <td>(AWC logo water bottle - holds 30 oz; leak-pro...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(Incredible traction, lightweight carbon reinf...</td>\n",
        "      <td>(Self-sealing tube.)</td>\n",
+       "      <td>(Incredible traction, lightweight carbon reinf...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>(Self-sealing tube.)</td>\n",
        "      <td>(Incredible traction, lightweight carbon reinf...</td>\n",
+       "      <td>(Self-sealing tube.)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>(Universal fit, well-vented, lightweight , sna...</td>\n",
        "      <td>(Self-sealing tube.)</td>\n",
+       "      <td>(Universal fit, well-vented, lightweight , sna...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>(Self-sealing tube.)</td>\n",
        "      <td>(Universal fit, well-vented, lightweight , sna...</td>\n",
+       "      <td>(Self-sealing tube.)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3823,24 +3823,24 @@
       ],
       "text/plain": [
        "                                         antecedents  \\\n",
-       "0  (Aluminum cage is lighter than our mountain ve...   \n",
-       "1  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
-       "2  (Tough aluminum cage holds bottle securly on t...   \n",
-       "3  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
-       "4  (Incredible traction, lightweight carbon reinf...   \n",
-       "5                               (Self-sealing tube.)   \n",
-       "6  (Universal fit, well-vented, lightweight , sna...   \n",
-       "7                               (Self-sealing tube.)   \n",
+       "0  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
+       "1  (Aluminum cage is lighter than our mountain ve...   \n",
+       "2  (AWC logo water bottle - holds 30 oz; leak-pro...   \n",
+       "3  (Tough aluminum cage holds bottle securly on t...   \n",
+       "4                               (Self-sealing tube.)   \n",
+       "5  (Incredible traction, lightweight carbon reinf...   \n",
+       "6                               (Self-sealing tube.)   \n",
+       "7  (Universal fit, well-vented, lightweight , sna...   \n",
        "\n",
        "                                         consequents  \n",
-       "0  (AWC logo water bottle - holds 30 oz; leak-pro...  \n",
-       "1  (Aluminum cage is lighter than our mountain ve...  \n",
-       "2  (AWC logo water bottle - holds 30 oz; leak-pro...  \n",
-       "3  (Tough aluminum cage holds bottle securly on t...  \n",
-       "4                               (Self-sealing tube.)  \n",
-       "5  (Incredible traction, lightweight carbon reinf...  \n",
-       "6                               (Self-sealing tube.)  \n",
-       "7  (Universal fit, well-vented, lightweight , sna...  "
+       "0  (Aluminum cage is lighter than our mountain ve...  \n",
+       "1  (AWC logo water bottle - holds 30 oz; leak-pro...  \n",
+       "2  (Tough aluminum cage holds bottle securly on t...  \n",
+       "3  (AWC logo water bottle - holds 30 oz; leak-pro...  \n",
+       "4  (Incredible traction, lightweight carbon reinf...  \n",
+       "5                               (Self-sealing tube.)  \n",
+       "6  (Universal fit, well-vented, lightweight , sna...  \n",
+       "7                               (Self-sealing tube.)  "
       ]
      },
      "execution_count": 48,
@@ -3905,6 +3905,14 @@
     "$( document ).ready(code_toggle);\n",
     "</script>\n",
     "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5347c085",
+   "metadata": {},
+   "source": [
+    "## Time Series Analysis and Forecasting for Top Product by Revenue"
    ]
   }
  ],
