--- a/Project_5_Immigration_to_Canada_Data_Analysis_and_Visualization/notebook/Canada_immigration_Analysis.ipynb
+++ b/Project_5_Immigration_to_Canada_Data_Analysis_and_Visualization/notebook/Canada_immigration_Analysis.ipynb
@@ -2390,7 +2390,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "42515e49",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
