--- a/Project_2_Contoso_Business_Analytics/notebook/ContosoCustomerAnalysis.ipynb
+++ b/Project_2_Contoso_Business_Analytics/notebook/ContosoCustomerAnalysis.ipynb
@@ -4406,7 +4406,7 @@
    "execution_count": 71,
    "id": "e4b34ab4",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -5900,7 +5900,7 @@
    "execution_count": 88,
    "id": "e993992b",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -6877,20 +6877,24 @@
     "        dashb_df= dashb_df[dashb_df['HomeOwner'] == home_ownership]\n",
     "    \n",
     "    top20_customers = dashb_df.groupby('Customer').\\\n",
-    "            agg({'Revenue':'sum'}).\\\n",
-    "            rename(columns ={'Revenue':'TotalRevenue'}).\\\n",
-    "            sort_values('TotalRevenue', ascending = False).\\\n",
-    "            head(20)\n",
+    "                        agg({'Revenue':'sum'}).\\\n",
+    "                        rename(columns ={'Revenue':'TotalRevenue'}).\\\n",
+    "                        sort_values('TotalRevenue', ascending = False).\\\n",
+    "                        head(20)\n",
     "    \n",
     "    region_rev = dashb_df.groupby('Region').\\\n",
-    "                agg({'Revenue':'sum'}).\\\n",
-    "                rename(columns = {'Revenue':'TotalRevenue'}).\\\n",
-    "                sort_values('TotalRevenue', ascending = False)\n",
+    "                 agg({'Revenue':'sum'}).\\\n",
+    "                 rename(columns = {'Revenue':'TotalRevenue'}).\\\n",
+    "                 sort_values('TotalRevenue', ascending = False)\n",
+    "    \n",
     "    region_rev = region_rev[region_rev['TotalRevenue'] != 0]\n",
+    "    \n",
     "    southeast_central_northeast = (region_rev.loc['USA-NE'] + \n",
     "                                   region_rev.loc['USA-C'] + \n",
     "                                   region_rev.loc['USA-SE'])\n",
+    "    \n",
     "    region_rev.drop(labels = ['USA-SE','USA-C','USA-NE'], axis = 0, inplace = True)\n",
+    "     \n",
     "    region_rev.loc['USA-SE, USA-C & USA-NE']=southeast_central_northeast\n",
     "   \n",
     "    fig = plt.figure(figsize=(14,10), constrained_layout=True, facecolor = 'lightblue')\n",
