--- a/Business_Data_Analytics_Projects/Project_3_AdventureWorksUSA_Business_Analytics/notebook/AdventureWorksCustomerAnalysis.ipynb
+++ b/Business_Data_Analytics_Projects/Project_3_AdventureWorksUSA_Business_Analytics/notebook/AdventureWorksCustomerAnalysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Contoso Customer Analysis"
+    "# AdventureWorks Customer Analysis"
    ]
   },
   {
@@ -62,9 +62,8 @@
    "id": "4e47a0c5",
    "metadata": {},
    "source": [
-    "____\n",
-    "## Data Discovery & Collection\n",
-    "____"
+    "\n",
+    "## Data Discovery & Collection"
    ]
   },
   {
@@ -166,13 +165,17 @@
     "for file in sales_files:\n",
     "    df = pd.read_csv(file, index_col = None, header= 0)\n",
     "    sales_list.append(df)\n",
+    "    \n",
     "sales = pd.concat(sales_list, axis = 0, ignore_index = True)\n",
+    "\n",
     "# import products table from csv file\n",
-    "products = pd.read_csv('../data/Contoso_Products.csv')\n",
+    "products = pd.read_csv('../data/AdventureWorks_Products.csv')\n",
+    "\n",
     "# import the customers table from csv file\n",
-    "customers = pd.read_csv('../data/Contoso_Customers.csv', encoding= 'unicode_escape')\n",
+    "customers = pd.read_csv('../data/AdventureWorks_Customers.csv', encoding= 'unicode_escape')\n",
+    "\n",
     "#import territories table from csv file\n",
-    "territories = pd.read_csv('../data/Contoso_Territories.csv')\n",
+    "territories = pd.read_csv('../data/AdventureWorks_Territories.csv')\n",
     "\n",
     "\n",
     "# make a list for tables\n",
@@ -247,9 +250,8 @@
    "id": "1d3e1c30",
    "metadata": {},
    "source": [
-    "____\n",
-    "## Data Preparation\n",
-    "____"
+    "\n",
+    "## Data Preparation\n"
    ]
   },
   {
@@ -1516,7 +1518,7 @@
     {
      "data": {
       "text/plain": [
-       "16725"
+       "16616"
       ]
      },
      "execution_count": 31,
@@ -2555,7 +2557,7 @@
     {
      "data": {
       "text/plain": [
-       "21465"
+       "21475"
       ]
      },
      "execution_count": 49,
@@ -4485,7 +4487,7 @@
     {
      "data": {
       "text/plain": [
-       "23806"
+       "23816"
       ]
      },
      "execution_count": 73,
@@ -5982,7 +5984,7 @@
     {
      "data": {
       "text/plain": [
-       "29433"
+       "29453"
       ]
      },
      "execution_count": 90,
@@ -6661,7 +6663,7 @@
     {
      "data": {
       "text/plain": [
-       "21735"
+       "21740"
       ]
      },
      "execution_count": 98,
@@ -7170,7 +7172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 105,
    "id": "9357f335",
    "metadata": {},
    "outputs": [
@@ -7180,7 +7182,7 @@
        "Text(0.5, 1.0, 'Count of Customer-Lolaylaty-Levels')"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7205,7 +7207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 106,
    "id": "00253767",
    "metadata": {},
    "outputs": [],
@@ -7235,7 +7237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 107,
    "id": "79e7e102",
    "metadata": {},
    "outputs": [
@@ -7339,17 +7341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 108,
    "id": "770e8857",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "19"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7369,7 +7371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 109,
    "id": "077e57e8",
    "metadata": {
     "scrolled": false
@@ -7409,7 +7411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 110,
    "id": "da42ddc7",
    "metadata": {},
    "outputs": [
@@ -7419,7 +7421,7 @@
        "0"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7439,7 +7441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 111,
    "id": "c6bcab7a",
    "metadata": {
     "scrolled": false
@@ -7448,7 +7450,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e0750d8e53d4aaaa7b198c394c705c4",
+       "model_id": "a355693845a34aa68898e80b12dc2b6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -7465,7 +7467,7 @@
        "<function __main__.dashboard(gender, marital_status, home_ownership)>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
