--- a/Business_Data_Analytics_Projects/Project_1_Parch_and_Posey_Exporatory_Data_Analysis/notebook/Parch&PoseySQLAndPandasDataAnalysis.ipynb
+++ b/Business_Data_Analytics_Projects/Project_1_Parch_and_Posey_Exporatory_Data_Analysis/notebook/Parch&PoseySQLAndPandasDataAnalysis.ipynb
@@ -46,7 +46,7 @@
     "port_id= 5432\n",
     "database= 'Parch_and_Posey'\n",
     "username= 'postgres'\n",
-    "pwd= 'Iamwaleedsiendeed1'"
+    "pwd= 'Seriously?!'"
    ]
   },
   {
@@ -4062,13 +4062,23 @@
     "\n",
     "So, if NaN is not a nubmer, what is it?...it is a type of very tasty bread...owh wait..that is a different topic!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "04272f30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "data_analysis",
    "language": "python",
-   "name": "python3"
+   "name": "data_analysis"
   },
   "language_info": {
    "codemirror_mode": {
