--- a/Business_Data_Analytics_Projects/Project_2_ECommerce_Data_Analysis/notebook/E-Commerece_Dataset_Analysis.ipynb
+++ b/Business_Data_Analytics_Projects/Project_2_ECommerce_Data_Analysis/notebook/E-Commerece_Dataset_Analysis.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f32d25a",
+   "metadata": {},
+   "source": [
+    "## Problem Statement\n",
+    "The Marketing and Sales teams in an ECommerce company have meetings soon and would like to get some EDA for their Ecommerece data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "92cb4c2a",
    "metadata": {},
    "source": [
@@ -2221,7 +2230,7 @@
    "execution_count": 57,
    "id": "a21a755f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -4521,9 +4530,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "data_analysis",
    "language": "python",
-   "name": "python3"
+   "name": "data_analysis"
   },
   "language_info": {
    "codemirror_mode": {
