fixing the name of the ipnb file

--- a/Business_Data_Analytics_Projects/Project_5_Predciting_Calforina_Houses_Prices/notebook/Predicting_Calfornia_Houses_Prices.ipynb
+++ b/Business_Data_Analytics_Projects/Project_5_Predciting_Calforina_Houses_Prices/notebook/Predicting_Calfornia_Houses_Prices.ipynb
@@ -1860,7 +1860,7 @@
     "id": "ede6e9e0"
    },
    "source": [
-    "This verify that the gridserach method output the best model prediction"
+    "This verifies that the gridserach method output the best model prediction"
    ]
   },
   {
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "d612e28f",
    "metadata": {
     "colab": {
@@ -2283,21 +2283,10 @@
     "id": "d612e28f",
     "outputId": "4c3ab0b7-0a95-4907-c412-b555a5b7356b"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ridge_regression.pkl']"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "joblib.dump(en_grid, 'ridge_regression.pkl')\n"
+    "joblib.dump(en_grid, 'en_grid.pkl')\n"
    ]
   }
  ],
