adding an intro to the project

--- a/Business_Data_Analytics_Projects/Project_5_Predciting_Calforina_Houses_Prices/notebook/Predicting_Calfornia_Houses_Prices.ipynb
+++ b/Business_Data_Analytics_Projects/Project_5_Predciting_Calforina_Houses_Prices/notebook/Predicting_Calfornia_Houses_Prices.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "248a7bff",
+   "metadata": {},
+   "source": [
+    "# Predicting California Houses Prices using Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38885221",
+   "metadata": {},
+   "source": [
+    "## Objecitves\n",
+    "The objective of this project is to predict the median house value for California houses using data contains information from the 1990 California census. The data pertains to the houses found in a given California district and some summary stats about them based on the 1990 census data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "edbd6687",
@@ -16,6 +33,14 @@
     "import seaborn as sns\n",
     "\n",
     "from scipy.stats.mstats import normaltest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a8bac38",
+   "metadata": {},
+   "source": [
+    "## Data Collection"
    ]
   },
   {
@@ -531,7 +556,7 @@
     "id": "b9c08043"
    },
    "source": [
-    " EDA"
+    " ## EDA"
    ]
   },
   {
