updating project 4 in the non business section notebook

--- a/Non_Business_Data_Analytics_Projects/Project_4_Predicting_Concrete_Compressive_Strength/notebook/Concrete_Compressive_Strength_Prediction.ipynb
+++ b/Non_Business_Data_Analytics_Projects/Project_4_Predicting_Concrete_Compressive_Strength/notebook/Concrete_Compressive_Strength_Prediction.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "\n",
     "  ## Introduction\n",
-    "Concrete is the most important material in civil engineering and it is  of five major elements in various proportions: cement, water, coarse aggregates, fine aggregates (i.e. sand), and air. Concrete admixtures are natural or manufactured chemicals or additives added during concrete mixing to enhance specific properties of the fresh or hardened concrete, such as workability, durability, or early and final strength. The concrete compressive strength is a highly nonlinear function of age and ingredients. The have been several research to develop the optimum mixure of Concrete. \n",
+    "Concrete is the most important material in civil engineering and it is  of five major elements in various proportions: cement, water, coarse aggregates, fine aggregates (i.e. sand), and air. Concrete admixtures are natural or manufactured chemicals or additives added during concrete mixing to enhance specific properties of the fresh or hardened concrete, such as workability, durability, or early and final strength. The concrete compressive strength is a  function of age and ingredients. The have been several research to develop the optimum mixure of Concrete. \n",
     "\n",
     "\n",
     "## Problem Statement\n",
