fixing some words in the readme.md file

--- a/Non_Business_Data_Analytics_Projects/Project_4_Predicting_Concrete_Compressive_Strength/notebook/Concrete_Compressive_Strength_Prediction.ipynb
+++ b/Non_Business_Data_Analytics_Projects/Project_4_Predicting_Concrete_Compressive_Strength/notebook/Concrete_Compressive_Strength_Prediction.ipynb
@@ -1003,7 +1003,8 @@
      "iopub.status.idle": "2022-12-05T06:42:12.115380Z",
      "shell.execute_reply": "2022-12-05T06:42:12.114086Z",
      "shell.execute_reply.started": "2022-12-05T06:42:06.036968Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1511,7 +1512,8 @@
      "iopub.status.idle": "2022-12-05T06:42:15.949017Z",
      "shell.execute_reply": "2022-12-05T06:42:15.947742Z",
      "shell.execute_reply.started": "2022-12-05T06:42:12.525362Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2569,7 +2571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
