removing the model from the notebook folder

--- a/Non_Business_Data_Analytics_Projects/Project_4_Predicting_Concrete_Compressive_Strength/notebook/Concrete_Compressive_Strength_Prediction.ipynb
+++ b/Non_Business_Data_Analytics_Projects/Project_4_Predicting_Concrete_Compressive_Strength/notebook/Concrete_Compressive_Strength_Prediction.ipynb
@@ -17,11 +17,11 @@
    "source": [
     "\n",
     "  ## Introduction\n",
-    "Concrete is the most important material in civil engineering and it is  of five major elements in various proportions: cement, water, coarse aggregates, fine aggregates (i.e. sand), and air. Concrete admixtures are natural or manufactured chemicals or additives added during concrete mixing to enhance specific properties of the fresh or hardened concrete, such as workability, durability, or early and final strength. The concrete compressive strength is a  function of age and ingredients. The have been several research to develop the optimum mixure of Concrete. \n",
+    "Concrete is the most important material in civil engineering and it is  of five major elements in various proportions: cement, water, coarse aggregates, fine aggregates (i.e. sand), and air. Concrete admixtures are natural or manufactured chemicals or additives added during concrete mixing to enhance specific properties of the fresh or hardened concrete, such as workability, durability, or early and final strength. The concrete compressive strength is a  function of age and ingredients. The have been several research to develop the optimum mitxure of Concrete. \n",
     "\n",
     "\n",
     "## Problem Statement\n",
-    "The Concrete research usually uses Concrete Compressive Strength Test in lab to find out the resultant strengths of different combination of concrete ingredients. This can be costly and time consuming. In this project, I will predict the compressive strength of concrete mixure measured in MPa using the historical records of previous testing and regression analysis methods.\n",
+    "The Concrete research usually uses Concrete Compressive Strength Test in lab to find out the resultant strengths of different combination of concrete ingredients. This can be costly and time consuming. In this project, I will predict the compressive strength of concrete mixture measured in MPa using the historical records of previous testing and regression analysis methods.\n",
     "\n",
     "## Data Source\n",
     "\n",
@@ -2571,7 +2571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
