updating the notebook of project 6 predicting telco customers churn

--- a/Business_Data_Analytics_Projects/Project_6_Predicting_Teloc_Customers_Churn/notebook/Predicting_Telco_Customer_Churn.ipynb
+++ b/Business_Data_Analytics_Projects/Project_6_Predicting_Teloc_Customers_Churn/notebook/Predicting_Telco_Customer_Churn.ipynb
@@ -3878,6 +3878,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since accuracy score does not provide an accurate measure of a binary model performance, and that the objective of this project is to predict which customers are about to churn, I will evaluate the models based on the recall and f1 scores."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
@@ -4014,8 +4021,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since accuracy score does not provide an accurate description of the model performance, I will evaluate the models based on the f1 and recall scores.\n",
-    "\n",
     "Based on the results, I will select LinearSVC and LogisticRegression . However, I will attempt to improve the scoring first.\n"
    ]
   },
@@ -4111,21 +4116,6 @@
     "\n",
     "X2.columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-12-01T19:24:07.450571Z",
-     "iopub.status.busy": "2022-12-01T19:24:07.449386Z",
-     "iopub.status.idle": "2022-12-01T19:24:07.460856Z",
-     "shell.execute_reply": "2022-12-01T19:24:07.459423Z",
-     "shell.execute_reply.started": "2022-12-01T19:24:07.450512Z"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
