Add .gitattributes for line ending normalization

--- a/Business_Data_Analytics_Projects/Project_7_Hypermarket_Grocery_Sales_Analysis/notebook/grocery_sales_data_analysis.ipynb
+++ b/Business_Data_Analytics_Projects/Project_7_Hypermarket_Grocery_Sales_Analysis/notebook/grocery_sales_data_analysis.ipynb
@@ -34,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "c019ac8e",
+   "execution_count": 6,
+   "id": "ae35b1d2-d14f-4201-b48e-f1b60d22a09a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions = pd.read_csv(\"../project-data/project_transactions.csv\")"
+    "transactions =  pd.read_parquet('../project-data/grocery-data.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "id": "20749686",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "4     31742        -0.79        1          0.0                0.0  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "id": "ba40ff9c-71b5-46e0-8b8f-614b5a42a675",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "id": "4c10e5f5",
    "metadata": {},
    "outputs": [
